--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Louisiana State University,</span>
-            <span class="author-block"><sup>2</sup>Innopeak Technology,</span>
+            <span class="author-block"><sup>2</sup>InnoPeak Technology,</span>
             <span class="author-block"><sup>3</sup>Tencent Pixel Lab,</span>
             <span class="author-block"><sup>4</sup>ShanghaiTech University,</span>
 			      <span class="author-block"><sup>5</sup>George Mason University</span>
