--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="static/lightfieldPIV.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper(comming soon)</span>
+                  <span>Conference Paper</span>
                 </a>
 				      </span>
 				
