--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a href="https://zhangchen8.github.io/">Zhang Chen</a><sup>5</sup>
             </span>
             <span class="author-block">
-              <a href="https://yeauxji.github.io">Yu Ji</a><sup>5</sup>,
+              <a href="https://yeauxji.github.io">Yu Ji</a><sup>3</sup>,
             </span>
             <span class="author-block">
               <a href="http://www.yu-jingyi.com/">Jingyi Yu</a><sup>4</sup>
@@ -93,7 +93,16 @@
                 </a>
               </span>
 			   -->
-
+                <span class="link-block">
+                  <a href=""
+                     class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                        <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Code(Coming Soon)</span>
+                    </a>
+                </span>
+		    
          	<!-- Dataset Link. -->
                  <span class="link-block">
                   <a href=""
@@ -101,7 +110,7 @@
                     <span class="icon">
                         <i class="fa fa-github"></i>
                     </span>
-                    <span>Code(Coming Soon)</span>
+                    <span>Journal Paper(Coming Soon)</span>
                     </a>
                 </span>
           
