--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <a href="http://www.yu-jingyi.com/">Jingyi Yu</a><sup>4</sup>
             </span>
             <span class="author-block">
-              <a href="https://ivlab.cse.lsu.edu">Jinwei Ye</a><sup>5</sup>
+              <a href="https://cs.gmu.edu/~jinweiye/">Jinwei Ye</a><sup>5</sup>
             </span>
 
           </div>
