--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
               </span>
 			   -->
                 <span class="link-block">
-                  <a href=""
+                  <a href="https://ieeexplore.ieee.org/document/10015628"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                         <i class="fas fa-file-pdf"></i>
                     </span>
-                    <span>Journal Paper(Coming Soon)</span>
+                    <span>Journal Paper</span>
                     </a>
                 </span>
 		    
@@ -191,7 +191,16 @@
   title     = {3D Fluid Flow Reconstruction Using Compact Light Field PIV},
   booktitle = {European Conference on Computer Vision},
   year      = {2020},
-}</code></pre>
+  }</code></pre>
+	    <pre><code>@ARTICLE{Ding2020,
+  author={Ding, Yuqi and Li, Zhong and Chen, Zhang and Ji, Yu and Yu, Jingyi and Ye, Jinwei},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={Full-Volume 3D Fluid Flow Reconstruction With Light Field PIV}, 
+  year={2023},
+  pages={1-14},
+  doi={10.1109/TPAMI.2023.3236344},
+  }</code></pre>  
+	  
   </div>
 </section>
 
