--- a/index.html
+++ b/index.html
@@ -102,6 +102,17 @@
                     <span>Journal Paper</span>
                     </a>
                 </span>
+
+         <!-- Supp Mat. -->
+				<span class="link-block">
+				  <a href="static/Supp.pdf"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                    <i class="fas fa-file-pdf"></i>
+                </span>
+              <span>Supplementary Material</span>
+            </a>
+        </span>
 		    
          	<!-- Dataset Link. -->
                  <span class="link-block">
@@ -134,17 +145,6 @@
                 <i class="far fa-images"></i>
             </span>
             <span>Real Data</span>
-            </a>
-        </span>
-        
-				<!-- Supp Mat. -->
-				<span class="link-block">
-				  <a href=""
-                class="external-link button is-normal is-rounded is-dark">
-                <span class="icon">
-                    <i class="fas fa-file-pdf"></i>
-                </span>
-              <span>Supplementary Material(coming soon)</span>
             </a>
         </span>
 
